Letter spacing fixed

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -59,8 +59,7 @@ body {
   color: $grey3;
   font-family: Lato;
   font-style: normal;
-  font-weight: normal;
-  text-shadow: 3px 2px $grey1;
+  text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
   text-align: center;
 
   height: 60vw;
@@ -72,7 +71,7 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    letter-spacing: 0.1rem;
+    letter-spacing: 0.2em;
     transform: translate(-50%, -50%);
 
     font-size: 1.2rem;
@@ -86,4 +85,8 @@ body {
       font-size: 3.5rem;
     }
   }
+}
+
+.section-title {
+  letter-spacing: 0.2em;
 }
