--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -14,6 +14,8 @@
   color: rgba(0, 0, 0, 0.54);
   font-weight: normal;
   border-width: 3px;
+  letter-spacing: 0.15em;
+  text-align: center;
 
   &:hover {
     background-color: rgba(0, 0, 0, 0.54) !important;
